# hyprnav

./: .gitignore  AGENTS.md  CMakeLists.txt  flake.nix  move_hm.sh  skills-lock.json
hyprexpo/: CMakeLists.txt  Makefile  PreviewManager.cpp  PreviewManager.hpp  SpawnManager.cpp  SpawnManager.hpp  common.cpp  common.hpp  default.nix  main.cpp  meson.build  overview.cpp  overview.hpp
hyprexpo-switcher/: .current-path  CMakeLists.txt  Cargo.toml  build.rs  default.nix  hyprexpo-switcher.desktop
hyprexpo-switcher/cpp/: layer_shell_bridge.cpp  layer_shell_bridge.hpp
hyprexpo-switcher/qml/: Main.qml  qml.qrc
hyprexpo-switcher/src/: AppController.cpp  AppController.hpp  WorkspaceModel.cpp  WorkspaceModel.hpp  cli.rs  controller.rs  lib.rs  main.cpp  main.rs  runtime_paths.rs  workspace_utils.cpp  workspace_utils.hpp
hyprexpo-switcher/tests/: test_switcher.cpp
hyprexpo/.reload/: current-path
hyprnav/: CMakeLists.txt  Cargo.toml  README.md  build.rs  default.nix  hyprnav.desktop
hyprnav/cpp/: layer_shell_bridge.cpp  layer_shell_bridge.hpp  model_bridge.cpp  model_bridge.hpp
hyprnav/qml/: EnvironmentGrid.qml  Main.qml  qml.qrc
hyprnav/src/: cli.rs  controller.rs  db.rs  lib.rs  main.rs  protocol.rs  runtime_paths.rs  server.rs  spawn.rs  ui_session.rs  workspace_utils.rs
