[package]
name = "hyprexpo-switcher"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "hyprexpo_switcher"
path = "src/lib.rs"

[[bin]]
name = "hyprexpo-switcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cxx = "1.0"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
